--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -1,3 +1,14 @@
-:root {
-  background-color: aqua;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.home-container {
+  width: 100%;
+}
+
+.box {
+  width: 100%;
+  height: 300px;
+  border: 1px solid black;
 }
