--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,8 +9,114 @@
   width: 100%;
 }
 
+.body-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .box {
-  width: 100%;
-  height: 300px;
-  border: 1px solid black;
+  width: 45vw;
+  height: 70vh;
+  margin-top: 10em;
+  padding-left: 30px;
+  padding-right: 30px;
+  /* background-color: #0617ff; */
+}
+
+.HeadText {
+  font-size: 4rem;
+  font-weight: 600;
+  color: #4b4b4b;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+.DescriptionText {
+  padding-top: 30px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #4b4b4b;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  text-align: justify;
+}
+
+.ProjectData {
+  margin-top: 60px;
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.DataValue {
+  font-size: 2.4rem;
+  color: #4b4b4b;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+.DataText {
+  font-size: 1.3rem;
+  color: #4b4b4b;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+
+.line {
+  height: 85px;
+  width: 2px;
+  background-color: #a8a8a8;
+  content: "";
+}
+
+.ButtonContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.Button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #06a5ff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.Button:hover {
+  background-color: #70accf;
+}
+
+/* 2nd scroller  */
+
+.ModelCOntainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  align-items: center;
+}
+
+.box2 {
+  width: 100vw;
+  height: 100vh;
+  margin-top: 10em;
+  padding-left: 30px;
+  padding-right: 30px;
+  /* background-color: #0617ff; */
+}
+
+/* 3nd scroller  */
+
+.ModelCOntainer {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  align-items: center;
+  /* background-color: #ff0606; */
 }
