--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -1,15 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .NavbarItems {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #ececec;
   color: #fff;
-  padding: 10px 20px;
   font-family: "Poppins", sans-serif;
   font-weight: 5ss00;
-  font-size: 20px;
+  font-size: 2 0px;
+  width: 100%;
+  height: 4em;
+}
+.hidden {
+  transform: translateY(-100%);
 }
 
 .logo img {
@@ -54,7 +59,7 @@
     top: 60px; /* Adjust as needed */
     left: 0;
     width: 100%;
-    background-color: #1e1e1e;
+    background-color: #ececec;
     padding: 10px 0;
   }
 
