--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+}
 .NavbarItems {
   position: fixed;
   display: flex;
@@ -52,6 +56,11 @@
     display: block; /* Show when screen size is less than or equal to 768px */
   }
 
+  .NavbarItems {
+    position: relative;
+    justify-content: space-around;
+    text-align: center;
+  }
   .nav-menu {
     display: none; /* Hide by default on smaller screens */
     flex-direction: column;
