--- a/src/Component/About.css
+++ b/src/Component/About.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .About-Container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   align-self: center;
   justify-content: center;
@@ -24,8 +24,8 @@
 .AboutBox1 {
   align-content: center;
   width: 45vw;
-  padding-left: 30px;
-  padding-right: 30px;
+  height: 40em;
+  overflow: hidden;
 }
 
 .HeaderText {
@@ -44,4 +44,48 @@
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
+}
+
+@media screen and (max-width: 768px) {
+  .About-BodyContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+  }
+
+  .HeaderText {
+    margin-bottom: 2rem;
+    margin-left: 0px;
+    font-size: 2em;
+  }
+
+  .About-Container {
+    height: 100%;
+    width: 100vw;
+    margin-top: 0rem;
+    column-gap: 1px;
+  }
+  .About-Container {
+    text-align: center;
+  }
+
+  .AboutBox {
+    width: 100vw;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .BodyText {
+    margin-top: 30px;
+    margin-left: 0px;
+    font-size: 1.11em;
+    text-align: left;
+  }
+
+  .AboutBox1 {
+    align-content: center;
+    width: 100vw;
+    height: 20rem;
+    overflow: hidden;
+  }
 }
