--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .Contact-Container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   align-self: center;
   justify-content: center;
@@ -15,4 +15,15 @@
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+}
+
+@media screen and (max-width: 768px) {
+  .Contact-Container {
+    width: 100vw;
+    height: 50vh;
+  }
+
+  .EmailText {
+    font-size: 2em;
+  }
 }
