--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -5,7 +5,7 @@
   padding: 0;
 }
 
-.home-container {
+.home-containerq {
   width: 100%;
 }
 
@@ -18,10 +18,16 @@
 .box {
   width: 45vw;
   height: 70vh;
-  margin-top: 10em;
-  padding-left: 30px;
-  padding-right: 30px;
-  /* background-color: #0617ff; */
+  margin-top: 15em;
+  /* padding-left: 30px;
+  padding-right: 30px; */
+}
+
+.box2 {
+  width: 40vw;
+  height: 70vh;
+  margin-top: 15em;
+  /* background-color: #404dff3d; */
 }
 
 .HeadText {
@@ -42,11 +48,16 @@
   text-align: justify;
 }
 
+.Data {
+  text-align: center;
+}
+
 .ProjectData {
   margin-top: 60px;
   display: flex;
   column-gap: 20px;
   align-items: center;
+  padding-left: 2rem;
 }
 
 .DataValue {
@@ -101,15 +112,6 @@
   align-items: center;
 }
 
-.box2 {
-  width: 100vw;
-  height: 100vh;
-  margin-top: 10em;
-  padding-left: 30px;
-  padding-right: 30px;
-  /* background-color: #0617ff; */
-}
-
 /* 3nd scroller  */
 
 .ModelCOntainer {
@@ -119,4 +121,46 @@
   margin-top: 50px;
   align-items: center;
   /* background-color: #ff0606; */
+}
+
+@media screen and (max-width: 768px) {
+  .body-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .box {
+    margin-top: 5rem;
+    width: 100vw;
+    height: 70vh;
+    /* background-color: #0617ff; */
+  }
+
+  .box2 {
+    margin-top: 0rem;
+    width: 100vw;
+    height: 70vh;
+    /* background-color: #0617ff; */
+  }
+
+  .HeadText {
+    font-size: 2em;
+    text-align: center;
+  }
+
+  .DescriptionText {
+    font-size: 1rem;
+    margin: 0rem 1rem;
+  }
+
+  .ProjectData {
+    margin-top: 60px;
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0rem;
+  }
 }
