--- a/src/Component/Project.css
+++ b/src/Component/Project.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .Project-Container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 .Project-HeaderText {
@@ -46,4 +46,37 @@
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   text-align: justify;
+}
+
+@media screen and (max-width: 768px) {
+  .Project-Container {
+    height: 100%;
+    width: 100vw;
+    text-align: center;
+  }
+
+  .Project-BodyContainer {
+    row-gap: 30px;
+  }
+
+  .Project-HeaderText {
+    padding-left: 0px;
+    margin-top: 10rem;
+    margin-bottom: 2.6rem;
+    font-size: 2em;
+  }
+
+  .ProjectBoxHeader {
+    margin-bottom: 2rem;
+  }
+
+  .ProjectBox {
+    border-radius: 3em;
+    border: 1px solid #4b4b4b;
+    width: 80vw;
+    height: 50vh;
+    overflow: hidden;
+    padding-top: 2rem;
+    text-align: center;
+  }
 }
