--- a/src/Component/Contact.css
+++ b/src/Component/Contact.css
@@ -19,8 +19,9 @@
 
 @media screen and (max-width: 768px) {
   .Contact-Container {
+    position: relative;
     width: 100vw;
-    height: 50vh;
+    height: 100vh;
   }
 
   .EmailText {
