--- a/src/Component/Navbar.css
+++ b/src/Component/Navbar.css
@@ -12,25 +12,26 @@
   background-color: #ececec;
   color: #fff;
   font-family: "Poppins", sans-serif;
-  font-weight: 5ss00;
   font-size: 2 0px;
   width: 100%;
   height: 4em;
+  z-index: 2;
+  transition: transform 0.3s ease;
 }
 .hidden {
   transform: translateY(-100%);
 }
 
 .logo img {
-  height: 40px; /* Adjust as needed */
+  height: 40px;
 }
 
 .menu-icon {
-  cursor: pointer;
-  display: none; /* Hide by default */
+  display: none;
 }
 
 .nav-menu {
+  cursor: pointer;
   list-style: none;
   display: flex;
   margin-right: 4vw;
@@ -53,27 +54,34 @@
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
   .menu-icon {
-    display: block; /* Show when screen size is less than or equal to 768px */
+    color: #1e1e1e;
+    display: block;
+    transition: transform 0.3s ease;
   }
 
   .NavbarItems {
-    position: relative;
+    position: fixed;
     justify-content: space-around;
     text-align: center;
+    transition: transform 0.3s ease;
   }
   .nav-menu {
-    display: none; /* Hide by default on smaller screens */
+    cursor: none;
+    display: flex;
     flex-direction: column;
     position: absolute;
-    top: 60px; /* Adjust as needed */
+    top: 60px;
     left: 0;
     width: 100%;
     background-color: #ececec;
-    padding: 10px 0;
+    max-height: 0; /* Initially hide the menu */
+    overflow: hidden; /* Hide overflow content */
+    transition: max-height 0.9s ease; /* Add transition for smooth animation */
   }
 
   .nav-menu.active {
-    display: flex; /* Show when menu is active */
+    display: flex;
+    max-height: 500px; /* Set a maximum height for the menu */
   }
 
   .nav-menu li {
