--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -31,6 +31,8 @@
   /* background-color: #06a5ff; */
   overflow: hidden;
   margin-top: 2em;
+  position: relative; /* Ensure it's positioned relative or absolute */
+  z-index: 1; /* Set a higher z-index value */
 }
 
 .HeadText {
