--- a/src/Component/About.css
+++ b/src/Component/About.css
@@ -32,7 +32,7 @@
   margin-top: 0em;
   margin-bottom: 30px;
   margin-left: 30px;
-  font-size: 4rem;
+  font-size: 3em;
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -41,7 +41,7 @@
 .BodyText {
   margin-top: 30px;
   margin-left: 80px;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
