--- a/src/Component/Project.css
+++ b/src/Component/Project.css
@@ -8,7 +8,7 @@
   padding-left: 30px;
   margin-top: 2.5rem;
   margin-bottom: 7rem;
-  font-size: 4rem;
+  font-size: 3em;
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -22,13 +22,15 @@
 }
 
 .ProjectBox {
-  border-radius: 7em;
+  border-radius: 5em;
   border: 1px solid #4b4b4b;
   width: 22vw;
-  height: 65vh;
+  height: 100%;
   overflow: hidden;
-  padding-top: 6rem;
+  padding-top: 5rem;
   text-align: center;
+  padding-bottom: 9em;
+  justify-content: center;
 }
 
 .ProjectBoxHeader {
@@ -36,7 +38,7 @@
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-  margin-bottom: 5rem;
+  /* margin-bottom: 5rem; */
 }
 
 .ProjectBoxDescription {
@@ -46,6 +48,7 @@
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   text-align: justify;
+  margin-top: 3rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -69,15 +72,17 @@
 
   .ProjectBoxHeader {
     margin-bottom: 2rem;
+    font-size: 1.5em;
   }
 
   .ProjectBox {
     border-radius: 3em;
     border: 1px solid #4b4b4b;
     width: 80vw;
-    height: 50vh;
+    height: 100%;
     overflow: hidden;
     padding-top: 2rem;
+    padding-bottom: 3.5em;
     text-align: center;
   }
 }
