--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -128,6 +128,12 @@
   /* background-color: #ff0606; */
 }
 
+@media screen and (max-width: 378px) {
+  .home-containerq {
+    padding-bottom: 15rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .body-container {
     display: flex;
