--- a/src/Component/Css/About.css
+++ b/src/Component/Css/About.css
@@ -2,7 +2,7 @@
 
 .About-Container {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   align-self: center;
   justify-content: center;
   align-content: center;
