--- a/src/Component/Css/Galary.css
+++ b/src/Component/Css/Galary.css
@@ -1,14 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .Galary-Container {
+  background-color: #fafafa;
   width: 100%;
-  height: 100vh;
+  margin-bottom: 7rem;
 }
 
 .Galary-HeaderText {
   padding-left: 30px;
   margin-top: 2.5rem;
-  margin-bottom: 7rem;
+  margin-bottom: 4rem;
   font-size: 3em;
   color: #4b4b4b;
   font-family: "Poppins", sans-serif;
@@ -16,23 +17,66 @@
 }
 
 .Galary-BodyContainer {
+  row-gap: 50px;
   display: flex;
   flex-wrap: wrap;
-  column-gap: 100px;
-  /* justify-content: center; */
+  justify-content: space-around;
 }
 
-.GalaryBox1 {
-  width: 25vw;
-  height: 100px;
+.itemBox {
+  border-radius: 30px;
+  width: 500px;
+  height: 350px;
   overflow: hidden;
-  padding-top: 5rem;
-  text-align: center;
-  padding-bottom: 9em;
   justify-content: center;
-  background-color: #fbf0ff;
+  align-items: center;
 }
 
 .Image {
   width: 100%;
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.one {
+  background-color: #fbf0ff;
+}
+
+.two {
+  background-color: #dff4ff;
+}
+
+.three {
+  background-color: #d3d2ff;
+}
+
+.four {
+  background-color: #e3ffda;
+}
+
+.five {
+  background-color: #ffe7fb;
+}
+
+.six {
+  background-color: #e6e6e6;
+}
+@media screen and (max-width: 768px) {
+  .Galary-BodyContainer {
+    row-gap: 50px;
+    padding: 20px;
+  }
+
+  .itemBox {
+    height: 280px;
+  }
+
+  .Galary-HeaderText {
+    padding-left: 0px;
+    font-size: 2em;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
 }
