--- a/src/Component/Css/Project.css
+++ b/src/Component/Css/Project.css
@@ -2,7 +2,6 @@
 
 .Project-Container {
   width: 100%;
-  height: 100vh;
 }
 .Project-HeaderText {
   padding-left: 30px;
@@ -53,10 +52,9 @@
 
 @media screen and (max-width: 768px) {
   .Project-Container {
-    height: 100%;
     width: 100vw;
     text-align: center;
-    margin-bottom: 30rem;
+    /* margin-bottom: 30rem; */
   }
 
   .Project-BodyContainer {
